--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xiaohongshu.dampingscrolling.DampingScrollViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<com.xiaohongshu.dampingscrolling.DampingScrollViewGroupPart1 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:dampingDirection="left|top|right|bottom"
+    app:dampingDirection="left"
     app:dampingFactor="0.7">
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/holo_blue_light"
         android:gravity="center"
-        android:onClick="onClick"
         android:text="最简单的阻尼滚动"
         android:textColor="@android:color/white" />
 
-</com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+</com.xiaohongshu.dampingscrolling.DampingScrollViewGroupPart1>
