--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.xiaohongshu.dampingscrolling.MainActivity">
 
-    <com.xiaohongshu.dampingscrolling.DampingScrollViewGroup
+    <com.xiaohongshu.dampingscrolling.OverScrollLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:dampingDirection="left|right"
@@ -18,9 +18,9 @@
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+    </com.xiaohongshu.dampingscrolling.OverScrollLayout>
 
-    <com.xiaohongshu.dampingscrolling.DampingScrollViewGroup
+    <com.xiaohongshu.dampingscrolling.OverScrollLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dampingDirection="left|right"
@@ -41,9 +41,9 @@
                 android:padding="20dp"
                 android:textColor="@android:color/white" />
         </HorizontalScrollView>
-    </com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+    </com.xiaohongshu.dampingscrolling.OverScrollLayout>
 
-    <com.xiaohongshu.dampingscrolling.DampingScrollViewGroup
+    <com.xiaohongshu.dampingscrolling.OverScrollLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:dampingDirection="left|top|right|bottom"
@@ -60,14 +60,14 @@
             android:padding="20dp"
             android:text="四向阻尼"
             android:textColor="@android:color/white" />
-    </com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+    </com.xiaohongshu.dampingscrolling.OverScrollLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <com.xiaohongshu.dampingscrolling.DampingScrollViewGroup
+        <com.xiaohongshu.dampingscrolling.OverScrollLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -88,9 +88,9 @@
                     android:text="@string/text"
                     android:textColor="@android:color/white" />
             </ScrollView>
-        </com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+        </com.xiaohongshu.dampingscrolling.OverScrollLayout>
 
-        <com.xiaohongshu.dampingscrolling.DampingScrollViewGroup
+        <com.xiaohongshu.dampingscrolling.OverScrollLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -103,6 +103,6 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/holo_red_light" />
 
-        </com.xiaohongshu.dampingscrolling.DampingScrollViewGroup>
+        </com.xiaohongshu.dampingscrolling.OverScrollLayout>
     </LinearLayout>
 </LinearLayout>
