--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xiaohongshu.dampingscrolling.DampingScrollViewGroupPart1 xmlns:android="http://schemas.android.com/apk/res/android"
+<com.xiaohongshu.dampingscrolling.OverScrollLayoutPart1 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +14,4 @@
         android:text="最简单的阻尼滚动"
         android:textColor="@android:color/white" />
 
-</com.xiaohongshu.dampingscrolling.DampingScrollViewGroupPart1>
+</com.xiaohongshu.dampingscrolling.OverScrollLayoutPart1>
